network.tf
 ______     __     __     ______    
/\  __ \   /\ \  _ \ \   /\  ___\   
\ \  __ \  \ \ \/ ".\ \  \ \___  \  
 \ \_\ \_\  \ \__/".~\_\  \/\_____\ 
  \/_/\/_/   \/_/   \/_/   \/_____/ 
                                    
##################
# VPC and SUBNETS
##################

resource "aws_vpc" "vpc" {
  cidr_block           = "10.215.0.0/24"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "My-Zabbix-VPC"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "My-Zabbix-VPC-IGW"
  }
}

resource "aws_subnet" "public-subnet-1" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.215.0.0/27"
  map_public_ip_on_launch = true
  availability_zone = "${var.my_aws_region}a"

  tags = {
    Name = "Zabbix-Public-Subnet-1"
  }
}
resource "aws_subnet" "private-subnet-1" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.215.0.32/27"
  map_public_ip_on_launch = false
  availability_zone = "${var.my_aws_region}a"

  tags = {
    Name = "Zabbix-Private-Subnet-1"
  }
}

resource "aws_subnet" "public-subnet-2" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.215.0.64/27"
  map_public_ip_on_launch = true
  availability_zone = "${var.my_aws_region}b"

  tags = {
    Name = "Zabbix-Public-Subnet-2"
  }
}
resource "aws_subnet" "private-subnet-2" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.215.0.96/27"
  map_public_ip_on_launch = false
  availability_zone = "${var.my_aws_region}b"

  tags = {
    Name = "Zabbix-Private-Subnet-2"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "Zabix-Public-Route-Table"
  }
}
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "Zabbix-Private-Route-Table"
  }
}

resource "aws_route_table_association" "public-subnet-association-1" {
  subnet_id      = aws_subnet.public-subnet-1.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "public-subnet-association-2" {
  subnet_id      = aws_subnet.public-subnet-2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private-association-1" {
  subnet_id      = aws_subnet.private-subnet-1.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private-association-2" {
  subnet_id      = aws_subnet.private-subnet-2.id
  route_table_id = aws_route_table.private.id
}
